# src/app/resources/person/routes.js
@@ -1,0 +1,8 @@
+const express = require('express')
+const { translator } = require('./translator')
+
+const routes = express.Router()
+
+routes.post('/person', translator.create)
+
+module.exports = routes
